# flash2osiris

./: .gitignore  README.md  environment.yml  pyproject.toml  runme.sh  setup_plugin.sh
examples/: example_1d.run.yaml  example_2d.run.yaml  example_carbon_hydrogen.run.yaml  example_magshock2019_ch.run.yaml  perlmutter_1d.run.yaml  perlmutter_2d.run.yaml
flash2osiris.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flash_osiris/: __init__.py  erase_shock.py  generator.py  yt_plugin.py
templates/: osiris_deck_TEMPLATE.jinja  py_init_TEMPLATE.jinja
tests/: test_species.py
